fix: change viewport height of banner section to avoid overflow

--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -11,10 +11,16 @@
     @media only screen and (max-width: $bp-1000) {
       margin-left: 0;
       max-width: 85%;
+      position: absolute;
+      top: 2rem;
     }
 
-    @media only screen and (max-width: $bp-1000) {
-      max-width: 100%;
+    @media only screen and (max-width: $bp-900) {
+      top: 4rem;
+    }
+
+    @media only screen and (max-width: $bp-600) {
+      top: 5rem;
     }
   }
 
